# davinci-resolve-mcp

./: .cursorrules  .gitignore  CHANGELOG.md  CHANGES.md  FEATURES.md  INSTALL.md  LICENSE  PROJECT_MCP_SETUP.md  README.md  VERSION.md  mcp-project-template.json  mcp_config.json  mcp_resolve-claude_start  mcp_resolve_launcher.sh  pyproject.toml  quick_marker_test.py  requirements.txt  resolve_mcp_server.py  run-now.bat  run-now.sh
config/: cursor-mcp-example.json
config-templates/: README.md  claude-desktop.template.json  sample_config.json
config-templates/macos/: cursor-mcp-config.template.json
config-templates/windows/: cursor-mcp-config.template.json
config/windows/: cursor-mcp-config.template.json
data/: agent_memory.db
davinci_resolve_agent/: README.md  agnomcp_server.py  client_simulator.py  common_utils.py  configure.py  demo.py  errors.py  mcp_agents.py  mcp_config.json  pyproject.toml  query_processor.py
docs/: AI_AGENT_README.md  CHANGELOG.md  COMMIT_MESSAGE.txt  FEATURES.md  TOOLS_README.md  VERSION.md
examples/: README.md  getting_started.py
examples/markers/: README.md  (+5 more)
scripts/: README.md  check-resolve-ready.ps1  check-resolve-ready.sh  launch.sh  mcp_resolve-cursor_start  mcp_resolve_launcher.sh  resolve_mcp_server.py  restart-server.bat  restart-server.sh  run-now.bat  run-now.sh  run-server.sh  server.sh  setup.sh  verify-installation.bat  verify-installation.sh
src/: __init__.py  main.py  resolve_mcp_server.py
tests/: create_test_timeline.py  test-after-restart.sh  test_custom_timeline.py  test_improvements.py
(+43 files in other folders)
