[project]
name = "davinci-resolve-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.1",
    "netifaces>=0.11.0",
    # Computer Vision and Image Processing
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    # Machine Learning and AI
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    # Async support
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    # Data processing and storage
    "pandas>=2.0.0", # For memory management
    # Optional: For advanced video analysis (install separately if needed)
    # torch>=2.0.0
    # torchvision>=0.15.0
    # transformers>=4.30.0
    "sqlite3-api>=2.0.0",
    # Additional libraries for davinci resolve agents
    "ollama>=0.5.1",
    "agno>=1.7.5",
    "openai>=1.97.0",
    "httpx[socks]>=0.28.1",
    "pyfiglet>=1.0.3",
    "termcolor>=3.1.0",
    "prompt-toolkit>=3.0.51",
]
